<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.StartFragment">

    <ImageView
        android:id="@+id/startImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/view_margin_extra"
        android:contentDescription="@string/start_image"
        android:layout_marginVertical="@dimen/view_margin_small"
        android:src="@drawable/start_image"
        app:layout_constraintBottom_toTopOf="@+id/welcomeText"
        app:layout_constraintDimensionRatio="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toTopOf="@id/startGameBtn"
        app:layout_constraintEnd_toEndOf="@id/startGameBtn"
        app:layout_constraintStart_toStartOf="@id/startGameBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startGameBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/view_margin_std"
        android:layout_marginBottom="@dimen/view_margin_small"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>