<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.TriviaFragment">

    <ImageView
        android:id="@+id/testImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/questionCategory"
        android:src="@drawable/test_image"
        android:layout_marginVertical="@dimen/view_margin_small"
        android:layout_marginHorizontal="@dimen/view_margin_extra"
        android:contentDescription="@string/test_image"/>

    <TextView
        android:id="@+id/questionCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/view_margin_std"
        android:layout_marginBottom="8dp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/question"
        tools:text="@string/question_category"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin_small"
        android:textSize="@dimen/text_size_bigger"
        app:autoSizeMaxTextSize="@dimen/text_size_bigger"
        app:autoSizeMinTextSize="@dimen/text_size_normal"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/answerLayout"
        app:layout_constraintEnd_toEndOf="@+id/questionCategory"
        app:layout_constraintStart_toStartOf="@id/questionCategory"
        tools:text="Question from server side to try answering." />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/answerLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/enter_you_answer"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="@id/question"
        app:layout_constraintStart_toStartOf="@id/question"
        app:layout_constraintVertical_bias="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/answerEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/view_margin_small"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/question"
        app:layout_constraintStart_toStartOf="@id/question" />

</androidx.constraintlayout.widget.ConstraintLayout>